welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: ')' expected but 'if' found.
  } if ((b>=13 && b<=19)) {
    ^countTeen:7: error: ';' expected but 'if' found.
  } if ((c>=13 && c<=19)) {
    ^